Fix black formatting

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,4 @@ jobs:
         run: |
           poetry update
           poetry install
-      - run: |
-          source $VENV
-          black . --check
+      - run: poetry run black . --check
