--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
-        python-version: ["3.6", "3.7", "3.8", "3.9"]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10.0-beta.1" ]
     defaults:
       run:
         shell: bash
@@ -25,6 +25,4 @@ jobs:
           version: 1.2.0a1
           virtualenvs-in-project: true
       - name: Resolve dependencies
-        run: |
-          poetry update
-          poetry install
+        run: poetry update -vvv
