--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,11 @@ authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
-dataclasses = {version=">=0.7,<0.9", python = "~3.6"}
+dataclasses = { version="^0.7", python="^3.6, <3.7" }
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
-black = "^20.8b1"
+black = {version="^20.8b1", allow-prereleases = true, python = "^3.6", markers = "platform_python_implementation == 'CPython'"}
 mypy = "^0.812"
 pytest-cov = "^2.12.0"
 attrs = "^21.2.0"
